src/main/java/org/pan/py/DrawParser.py
# Generated from E:/maven-project/bianyi/src/main/java/org/pan/antlr/Draw.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DrawParser ( Parser ):

    grammarFileName = "Draw.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "';'", "'('", "','", "')'", "'**'", "'+'", "'-'", "'*'", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "CONST_ID", "PI", "E", "SIN", "COS", 
                      "TAN", "LN", "EXP", "SQRT", "ORIGIN", "SCALE", "T", 
                      "DRAW", "STEP", "TO", "FROM", "FOR", "ROT", "IS", 
                      "WS", "SL_COMMENT1", "SL_COMMENT2", "ML_COMMENT1", 
                      "SEMI", "LPAREN", "COMMA", "RPAREN", "<INVALID>", 
                      "ADD", "SUB", "MUL", "DIV" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_origin = 2
    RULE_scale = 3
    RULE_rot = 4
    RULE_for = 5
    RULE_expr = 6
    RULE_expr1 = 7

    ruleNames =  [ "prog", "stat", "origin", "scale", "rot", "for", "expr", 
                   "expr1" ]

    EOF = Token.EOF
    CONST_ID=1
    PI=2
    E=3
    SIN=4
    COS=5
    TAN=6
    LN=7
    EXP=8
    SQRT=9
    ORIGIN=10
    SCALE=11
    T=12
    DRAW=13
    STEP=14
    TO=15
    FROM=16
    FOR=17
    ROT=18
    IS=19
    WS=20
    SL_COMMENT1=21
    SL_COMMENT2=22
    ML_COMMENT1=23
    SEMI=24
    LPAREN=25
    COMMA=26
    RPAREN=27
    T__2=28
    ADD=29
    SUB=30
    MUL=31
    DIV=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



        double piValue = 3.14159;
        double eValue = 2.71828;



    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DrawParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DrawParser.StatContext)
            else:
                return self.getTypedRuleContext(DrawParser.StatContext,i)


        def getRuleIndex(self):
            return DrawParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = DrawParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 396288) != 0):
                self.state = 16
                self.stat()
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 22
            self.match(DrawParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def origin(self):
            return self.getTypedRuleContext(DrawParser.OriginContext,0)


        def SEMI(self):
            return self.getToken(DrawParser.SEMI, 0)

        def scale(self):
            return self.getTypedRuleContext(DrawParser.ScaleContext,0)


        def rot(self):
            return self.getTypedRuleContext(DrawParser.RotContext,0)


        def for_(self):
            return self.getTypedRuleContext(DrawParser.ForContext,0)


        def getRuleIndex(self):
            return DrawParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = DrawParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 36
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 24
                self.origin()
                self.state = 25
                self.match(DrawParser.SEMI)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.scale()
                self.state = 28
                self.match(DrawParser.SEMI)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 30
                self.rot()
                self.state = 31
                self.match(DrawParser.SEMI)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.for_()
                self.state = 34
                self.match(DrawParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OriginContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.lhs = None # ExprContext
            self.rhs = None # ExprContext

        def ORIGIN(self):
            return self.getToken(DrawParser.ORIGIN, 0)

        def IS(self):
            return self.getToken(DrawParser.IS, 0)

        def LPAREN(self):
            return self.getToken(DrawParser.LPAREN, 0)

        def COMMA(self):
            return self.getToken(DrawParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(DrawParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DrawParser.ExprContext)
            else:
                return self.getTypedRuleContext(DrawParser.ExprContext,i)


        def getRuleIndex(self):
            return DrawParser.RULE_origin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrigin" ):
                listener.enterOrigin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrigin" ):
                listener.exitOrigin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrigin" ):
                return visitor.visitOrigin(self)
            else:
                return visitor.visitChildren(self)




    def origin(self):

        localctx = DrawParser.OriginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_origin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(DrawParser.ORIGIN)
            self.state = 39
            self.match(DrawParser.IS)
            self.state = 40
            self.match(DrawParser.LPAREN)
            self.state = 41
            localctx.lhs = self.expr(0)
            self.state = 42
            self.match(DrawParser.COMMA)
            self.state = 43
            localctx.rhs = self.expr(0)
            self.state = 44
            self.match(DrawParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScaleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.lhs = None # ExprContext
            self.rhs = None # ExprContext

        def SCALE(self):
            return self.getToken(DrawParser.SCALE, 0)

        def IS(self):
            return self.getToken(DrawParser.IS, 0)

        def LPAREN(self):
            return self.getToken(DrawParser.LPAREN, 0)

        def COMMA(self):
            return self.getToken(DrawParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(DrawParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DrawParser.ExprContext)
            else:
                return self.getTypedRuleContext(DrawParser.ExprContext,i)


        def getRuleIndex(self):
            return DrawParser.RULE_scale

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScale" ):
                listener.enterScale(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScale" ):
                listener.exitScale(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScale" ):
                return visitor.visitScale(self)
            else:
                return visitor.visitChildren(self)




    def scale(self):

        localctx = DrawParser.ScaleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_scale)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(DrawParser.SCALE)
            self.state = 47
            self.match(DrawParser.IS)
            self.state = 48
            self.match(DrawParser.LPAREN)
            self.state = 49
            localctx.lhs = self.expr(0)
            self.state = 50
            self.match(DrawParser.COMMA)
            self.state = 51
            localctx.rhs = self.expr(0)
            self.state = 52
            self.match(DrawParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RotContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROT(self):
            return self.getToken(DrawParser.ROT, 0)

        def IS(self):
            return self.getToken(DrawParser.IS, 0)

        def expr(self):
            return self.getTypedRuleContext(DrawParser.ExprContext,0)


        def getRuleIndex(self):
            return DrawParser.RULE_rot

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRot" ):
                listener.enterRot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRot" ):
                listener.exitRot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRot" ):
                return visitor.visitRot(self)
            else:
                return visitor.visitChildren(self)




    def rot(self):

        localctx = DrawParser.RotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rot)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(DrawParser.ROT)
            self.state = 55
            self.match(DrawParser.IS)
            self.state = 56
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.start_point = None # ExprContext
            self.end_point = None # ExprContext
            self.step_size = None # ExprContext
            self.horizontal_coordinate = None # Expr1Context
            self.vertical_coordinates = None # Expr1Context

        def FOR(self):
            return self.getToken(DrawParser.FOR, 0)

        def T(self):
            return self.getToken(DrawParser.T, 0)

        def FROM(self):
            return self.getToken(DrawParser.FROM, 0)

        def TO(self):
            return self.getToken(DrawParser.TO, 0)

        def STEP(self):
            return self.getToken(DrawParser.STEP, 0)

        def DRAW(self):
            return self.getToken(DrawParser.DRAW, 0)

        def LPAREN(self):
            return self.getToken(DrawParser.LPAREN, 0)

        def COMMA(self):
            return self.getToken(DrawParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(DrawParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DrawParser.ExprContext)
            else:
                return self.getTypedRuleContext(DrawParser.ExprContext,i)


        def expr1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DrawParser.Expr1Context)
            else:
                return self.getTypedRuleContext(DrawParser.Expr1Context,i)


        def getRuleIndex(self):
            return DrawParser.RULE_for

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor" ):
                listener.enterFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor" ):
                listener.exitFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor" ):
                return visitor.visitFor(self)
            else:
                return visitor.visitChildren(self)




    def for_(self):

        localctx = DrawParser.ForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_for)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(DrawParser.FOR)
            self.state = 59
            self.match(DrawParser.T)
            self.state = 60
            self.match(DrawParser.FROM)
            self.state = 61
            localctx.start_point = self.expr(0)
            self.state = 62
            self.match(DrawParser.TO)
            self.state = 63
            localctx.end_point = self.expr(0)
            self.state = 64
            self.match(DrawParser.STEP)
            self.state = 65
            localctx.step_size = self.expr(0)
            self.state = 66
            self.match(DrawParser.DRAW)
            self.state = 67
            self.match(DrawParser.LPAREN)
            self.state = 68
            localctx.horizontal_coordinate = self.expr1(0)
            self.state = 69
            self.match(DrawParser.COMMA)
            self.state = 70
            localctx.vertical_coordinates = self.expr1(0)
            self.state = 71
            self.match(DrawParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DrawParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class DivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DrawParser.ExprContext
            super().__init__(parser)
            self.lhs = None # ExprContext
            self.op = None # Token
            self.rhs = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DrawParser.ExprContext)
            else:
                return self.getTypedRuleContext(DrawParser.ExprContext,i)

        def SUB(self):
            return self.getToken(DrawParser.SUB, 0)
        def ADD(self):
            return self.getToken(DrawParser.ADD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiv" ):
                listener.enterDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiv" ):
                listener.exitDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiv" ):
                return visitor.visitDiv(self)
            else:
                return visitor.visitChildren(self)


    class BracketsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DrawParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(DrawParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(DrawParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(DrawParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBrackets" ):
                listener.enterBrackets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBrackets" ):
                listener.exitBrackets(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBrackets" ):
                return visitor.visitBrackets(self)
            else:
                return visitor.visitChildren(self)


    class FuncContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DrawParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(DrawParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(DrawParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(DrawParser.RPAREN, 0)
        def SIN(self):
            return self.getToken(DrawParser.SIN, 0)
        def COS(self):
            return self.getToken(DrawParser.COS, 0)
        def TAN(self):
            return self.getToken(DrawParser.TAN, 0)
        def LN(self):
            return self.getToken(DrawParser.LN, 0)
        def EXP(self):
            return self.getToken(DrawParser.EXP, 0)
        def SQRT(self):
            return self.getToken(DrawParser.SQRT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)


    class ConstContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DrawParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONST_ID(self):
            return self.getToken(DrawParser.CONST_ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst" ):
                listener.enterConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst" ):
                listener.exitConst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst" ):
                return visitor.visitConst(self)
            else:
                return visitor.visitChildren(self)


    class PosandnegContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DrawParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(DrawParser.ExprContext,0)

        def ADD(self):
            return self.getToken(DrawParser.ADD, 0)
        def SUB(self):
            return self.getToken(DrawParser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPosandneg" ):
                listener.enterPosandneg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPosandneg" ):
                listener.exitPosandneg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPosandneg" ):
                return visitor.visitPosandneg(self)
            else:
                return visitor.visitChildren(self)


    class PowerContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DrawParser.ExprContext
            super().__init__(parser)
            self.lhs = None # ExprContext
            self.op = None # Token
            self.rhs = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DrawParser.ExprContext)
            else:
                return self.getTypedRuleContext(DrawParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPower" ):
                listener.enterPower(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPower" ):
                listener.exitPower(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPower" ):
                return visitor.visitPower(self)
            else:
                return visitor.visitChildren(self)


    class MultDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DrawParser.ExprContext
            super().__init__(parser)
            self.lhs = None # ExprContext
            self.op = None # Token
            self.rhs = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DrawParser.ExprContext)
            else:
                return self.getTypedRuleContext(DrawParser.ExprContext,i)

        def MUL(self):
            return self.getToken(DrawParser.MUL, 0)
        def DIV(self):
            return self.getToken(DrawParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultDiv" ):
                listener.enterMultDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultDiv" ):
                listener.exitMultDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultDiv" ):
                return visitor.visitMultDiv(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DrawParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29, 30]:
                localctx = DrawParser.PosandnegContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 76
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [29]:
                    self.state = 74
                    localctx.op = self.match(DrawParser.ADD)
                    pass
                elif token in [30]:
                    self.state = 75
                    localctx.op = self.match(DrawParser.SUB)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 78
                self.expr(6)
                pass
            elif token in [1]:
                localctx = DrawParser.ConstContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 79
                self.match(DrawParser.CONST_ID)
                pass
            elif token in [4, 5, 6, 7, 8, 9]:
                localctx = DrawParser.FuncContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 80
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1008) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 81
                self.match(DrawParser.LPAREN)
                self.state = 82
                self.expr(0)
                self.state = 83
                self.match(DrawParser.RPAREN)
                pass
            elif token in [25]:
                localctx = DrawParser.BracketsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 85
                self.match(DrawParser.LPAREN)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(DrawParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 106
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = DrawParser.PowerContext(self, DrawParser.ExprContext(self, _parentctx, _parentState))
                        localctx.lhs = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 91
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 92
                        localctx.op = self.match(DrawParser.T__2)
                        self.state = 93
                        localctx.rhs = self.expr(7)
                        pass

                    elif la_ == 2:
                        localctx = DrawParser.MultDivContext(self, DrawParser.ExprContext(self, _parentctx, _parentState))
                        localctx.lhs = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 94
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 97
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [31]:
                            self.state = 95
                            localctx.op = self.match(DrawParser.MUL)
                            pass
                        elif token in [32]:
                            self.state = 96
                            localctx.op = self.match(DrawParser.DIV)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 99
                        localctx.rhs = self.expr(6)
                        pass

                    elif la_ == 3:
                        localctx = DrawParser.DivContext(self, DrawParser.ExprContext(self, _parentctx, _parentState))
                        localctx.lhs = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 100
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 103
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [30]:
                            self.state = 101
                            localctx.op = self.match(DrawParser.SUB)
                            pass
                        elif token in [29]:
                            self.state = 102
                            localctx.op = self.match(DrawParser.ADD)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 105
                        localctx.rhs = self.expr(5)
                        pass

             
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DrawParser.RULE_expr1

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Div1Context(Expr1Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DrawParser.Expr1Context
            super().__init__(parser)
            self.lhs = None # Expr1Context
            self.op = None # Token
            self.rhs = None # Expr1Context
            self.copyFrom(ctx)

        def expr1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DrawParser.Expr1Context)
            else:
                return self.getTypedRuleContext(DrawParser.Expr1Context,i)

        def SUB(self):
            return self.getToken(DrawParser.SUB, 0)
        def ADD(self):
            return self.getToken(DrawParser.ADD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiv1" ):
                listener.enterDiv1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiv1" ):
                listener.exitDiv1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiv1" ):
                return visitor.visitDiv1(self)
            else:
                return visitor.visitChildren(self)


    class Variable1Context(Expr1Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DrawParser.Expr1Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def T(self):
            return self.getToken(DrawParser.T, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable1" ):
                listener.enterVariable1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable1" ):
                listener.exitVariable1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable1" ):
                return visitor.visitVariable1(self)
            else:
                return visitor.visitChildren(self)


    class MultDiv1Context(Expr1Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DrawParser.Expr1Context
            super().__init__(parser)
            self.lhs = None # Expr1Context
            self.op = None # Token
            self.rhs = None # Expr1Context
            self.copyFrom(ctx)
